fixed reference to js file

--- a/start.html
+++ b/start.html
@@ -13,5 +13,5 @@
         <div id="winDiv" class="gameover hidden">YOU WIN</div>
         <div id="loseDiv" class="gameover hidden">YOU LOSE</div>
     </body>
-    <script src="js/main.js"></script>
+    <script src="js/guavanoid.js"></script>
 </html>
