added basic sfx

--- a/start.html
+++ b/start.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="css/master.css">
         <link rel="icon" type="image/png" href="icons/favicon.png">
         <title>Guavanoid</title>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
     </head>
     <body>
         <h1>Guavanoid</h1>
