isolated ball class to separate file

--- a/start.html
+++ b/start.html
@@ -6,6 +6,8 @@
         <link rel="icon" type="image/png" href="icons/favicon.png">
         <title>Guavanoid</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
+        <script src="js/guavanoid.js"></script>
+        <script src="js/ball.js"></script>
     </head>
     <body>
         <h1>Guavanoid</h1>
@@ -24,5 +26,4 @@
         </div>
         <button type="button" id="sfxToggleBtn">SFX ON</button>
     </body>
-    <script src="js/guavanoid.js"></script>
 </html>
