isolated player class to separate file

--- a/start.html
+++ b/start.html
@@ -8,6 +8,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
         <script src="js/guavanoid.js"></script>
         <script src="js/ball.js"></script>
+        <script src="js/player.js"></script>
     </head>
     <body>
         <h1>Guavanoid</h1>
