--- a/start.html
+++ b/start.html
@@ -9,6 +9,7 @@
         <script src="js/guavanoid.js"></script>
         <script src="js/ball.js"></script>
         <script src="js/block.js"></script>
+        <script src="js/levels.js"></script>
         <script src="js/player.js"></script>
     </head>
     <body>
