--- a/start.html
+++ b/start.html
@@ -11,6 +11,7 @@
         <script src="js/block.js"></script>
         <script src="js/collisions.js"></script>
         <script src="js/levels.js"></script>
+        <script src="js/listeners.js"></script>
         <script src="js/player.js"></script>
     </head>
     <body>
