--- a/start.html
+++ b/start.html
@@ -25,7 +25,7 @@
             YOU LOSE
             <span id="loseSpan" class="scoreSpan"></span>
         </div>
-        <div id="gameContainer" class="hidden">
+        <div id="gameContainerDiv" class="hidden">
             <div id="pauseDiv" class="gamescreen hidden"><span id="pauseSpan">GAME PAUSED</span></div>
             <canvas id="gameCanvas" class="hidden" width="640" height="480"></canvas>
         </div>
