--- a/start.html
+++ b/start.html
@@ -13,6 +13,7 @@
         <script src="js/levels.js"></script>
         <script src="js/listeners.js"></script>
         <script src="js/player.js"></script>
+        <script src="js/wall.js"></script>
     </head>
     <body>
         <h1>Guavanoid</h1>
