abstracted block to entity class

--- a/start.html
+++ b/start.html
@@ -6,10 +6,11 @@
         <link rel="icon" type="image/png" href="icons/favicon.png">
         <title>Guavanoid</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
-        <script src="js/guavanoid.js"></script>
+        <script src="js/entity.js"></script>
         <script src="js/ball.js"></script>
         <script src="js/block.js"></script>
         <script src="js/collisions.js"></script>
+        <script src="js/guavanoid.js"></script>
         <script src="js/levels.js"></script>
         <script src="js/listeners.js"></script>
         <script src="js/player.js"></script>
