--- a/guavanoid.html
+++ b/guavanoid.html
@@ -2,14 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="css/master.css">
+        <link rel="stylesheet" href="css/game.css">
         <link rel="icon" type="image/png" href="icons/favicon.png">
         <title>Guavanoid</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
         <script src="js/entity.js"></script>
         <script src="js/entities.js"></script>
         <script src="js/collisions.js"></script>
-        <script src="js/guavanoid.js"></script>
+        <script src="js/game.js"></script>
         <script src="js/levels.js"></script>
         <script src="js/listeners.js"></script>
         <script src="js/utility.js"></script>
