Moved game title to start screen

--- a/guavanoid.html
+++ b/guavanoid.html
@@ -15,7 +15,10 @@
         <script src="js/utility.js"></script>
     </head>
     <body>
-        <div id="startDiv"><button type="button" id="startButton">Start Game</button></div>
+        <div id="startDiv">
+            GUAVANOID
+            <button type="button" id="startButton">Start Game</button>
+        </div>
         <div id="gameContainerDiv" class="hidden">
             <div id="pauseDiv" class="gamescreen hidden"><span id="pauseSpan">GAME PAUSED</span></div>
             <canvas id="gameCanvas" class="hidden" width="640" height="480"></canvas>
