--- a/guavanoid.html
+++ b/guavanoid.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/game.css">
         <link rel="icon" type="image/png" href="icons/favicon.png">
-        <title>Guavanoid</title>
+        <title>GUAVANOID</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
         <script src="js/entity.js"></script>
         <script src="js/entities.js"></script>
@@ -15,13 +15,9 @@
         <script src="js/utility.js"></script>
     </head>
     <body>
-        <div id="startDiv">
-            GUAVANOID
-            <button type="button" id="startButton">Start Game</button>
-        </div>
-        <div id="gameContainerDiv" class="hidden">
+        <div id="gameContainerDiv">
             <div id="pauseDiv" class="gamescreen hidden"><span id="pauseSpan">GAME PAUSED</span></div>
-            <canvas id="gameCanvas" class="hidden" width="640" height="480"></canvas>
+            <canvas id="gameCanvas" width="640" height="480"></canvas>
         </div>
         <button type="button" id="sfxToggleBtn">SFX ON</button>
     </body>
