refactored audio and projectile code

--- a/guavanoid.html
+++ b/guavanoid.html
@@ -10,6 +10,7 @@
         <script src="js/entities.js"></script>
         <script src="js/collisions.js"></script>
         <script src="js/game.js"></script>
+        <script src="js/helpers.js"></script>
         <script src="js/levels.js"></script>
         <script src="js/listeners.js"></script>
         <script src="js/utility.js"></script>
