moved embedded asset load function into its own file

--- a/guavanoid.html
+++ b/guavanoid.html
@@ -6,6 +6,7 @@
         <link rel="icon" type="image/png" href="icons/favicon.png">
         <title>GUAVANOID</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
+        <script src="js/assets.js"></script>
         <script src="js/entity.js"></script>
         <script src="js/entities.js"></script>
         <script src="js/collisions.js"></script>
